--- a/views/listings/edit.ejs
+++ b/views/listings/edit.ejs
@@ -17,11 +17,18 @@
                 <div class="invalid-feedback">Please enter a short description</div>
             </div>
             
-            <div class="mb-3">
+            <!-- <div class="mb-3">
                 <label for="image" class="form-label">Image URL</label>
                 <input name="listings[image]" value="<%=listing.image.url%>" type="text" class="form-control" required>
                 <div class="invalid-feedback">Please enter a valid link for image</div>
+            </div> -->
+
+            <div class="mb-3">
+                <label for="image" class="form-label">Image URL</label>
+                <input name="listings[image]" value="<%= listing.image ? listing.image.url : '' %>" type="text" class="form-control" required>
+                <div class="invalid-feedback">Please enter a valid link for image</div>
             </div>
+            
             
     
             <div class="row">
