--- a/views/listings/edit.ejs
+++ b/views/listings/edit.ejs
@@ -7,13 +7,13 @@
         <form method="POST" action="/listings/<%=listing._id%>?_method=PUT" novalidate class="needs-validation">
             <div class="mb-3">
                 <label for="title" class="form-label">Title</label>
-                <input name="listings[title]" value="<%=listing.title%>" type="text" class="form-control" required>
+                <input name="listing[title]" value="<%=listing.title%>" type="text" class="form-control" required>
                 <div class="valid-feedback">Title looks good</div>
             </div>
             
             <div class="mb-3">
                 <label for="description" class="form-label">Description</label>  
-                <textarea name="listings[description]" type="text" class="form-control" required><%=listing.description%></textarea>
+                <textarea name="listing[description]" type="text" class="form-control" required><%=listing.description%></textarea>
                 <div class="invalid-feedback">Please enter a short description</div>
             </div>
             
@@ -25,7 +25,7 @@
 
             <div class="mb-3">
                 <label for="image" class="form-label">Image URL</label>
-                <input name="listings[image]" value="<%= listing.image ? listing.image.url : '' %>" type="text" class="form-control" required>
+                <input name="listing[image]" value="<%= listing.image ? listing.image.url : '' %>" type="text" class="form-control" required>
                 <div class="invalid-feedback">Please enter a valid link for image</div>
             </div>
             
@@ -34,13 +34,13 @@
             <div class="row">
                 <div class="mb-3 col-md-4">
                     <label for="price" class="form-label">Price</label>
-                    <input name="listings[price]" value="<%=listing.price%>" type="number" class="form-control" required>
+                    <input name="listing[price]" value="<%=listing.price%>" type="number" class="form-control" required>
                     <div class="invalid-feedback">Price should be valid</div>
                 </div>
                 
                 <div class="mb-3 col-md-8">
                     <label for="country" class="form-label">Country</label>
-                    <input name="listings[country]" value="<%=listing.country%>" type="text" class="form-control" required>
+                    <input name="listing[country]" value="<%=listing.country%>" type="text" class="form-control" required>
                     <div class="invalid-feedback">Country name should be valid</div>
                 </div>
             </div>
@@ -48,7 +48,7 @@
             
             <div class="mb-3">
                 <label for="location" class="form-label">Location</label>
-                <input name="listings[location]" value="<%=listing.location%>" type="text" class="form-control" required>
+                <input name="listing[location]" value="<%=listing.location%>" type="text" class="form-control" required>
                 <div class="invalid-feedback">Location should be valid</div>
             </div>
             
