--- a/views/listings/new.ejs
+++ b/views/listings/new.ejs
@@ -5,35 +5,35 @@
         
     <form method="POST" action="/listings" novalidate class="needs-validation">
     <div class="mb-3">
-        <label for="title" class="form-label">Title</label>   
-        <input name="listings[title]" placeholder="Add a catchy title" type="text" class="form-control" required>
+        <lable for="title" class="form-label">Title</lable>   
+        <input name="listing[title]" placeholder="Add a catchy title" type="text" class="form-control" required>
         <div class="valid-feedback">Title looks good</div>
     </div>
     
     
 
     <div class="mb-3">
-        <label for="description" class="form-label">Description</label>  
-        <textarea name="listings[description]" placeholder="enter description" type="text" class="form-control" required></textarea>
+        <lable for="description" class="form-label">Description</lable>  
+        <textarea name="listing[description]" placeholder="enter description" type="text" class="form-control" required></textarea>
         <div class="invalid-feedback">Please enter a short description</div>
     </div>
     
     <div class="mb-3">
-        <label for="image" class="form-label">Image URL</label>
-        <input name="listings[image]" placeholder="enter image URL" type="text" class="form-control">
+        <lable for="image" class="form-label">Image URL</lable>
+        <input name="listing[image]" placeholder="enter image URL" type="text" class="form-control">
     </div>
     
 
     <div class="row">
         <div class="mb-3 col-md-4">
-            <label for="price" class="form-label">Price</label>
-            <input name="listings[price]" placeholder="1200" type="number" class="form-control" required>
+            <lable for="price" class="form-label">Price</lable>
+            <input name="listing[price]" placeholder="1200" type="number" class="form-control" required>
             <div class="invalid-feedback">Price should be valid</div>
         </div>
         <br>
         <div class="mb-3 col-md-8">
-            <label for="country" class="form-label">Country</label>
-            <input name="listings[country]" placeholder="India" type="text" class="form-control" required>
+            <lable for="country" class="form-label">Country</lable>
+            <input name="listing[country]" placeholder="India" type="text" class="form-control" required>
             <div class="invalid-feedback">Country name should be valid</div>
     </div>
     
@@ -41,8 +41,8 @@
     </div>
     
     <div class="mb-3">
-        <label for="location" class="form-label">Location</label>
-        <input name="listings[location]" placeholder="Ponmudi,Kerala" type="text" class="form-control" required>
+        <lable for="location" class="form-label">Location</lable>
+        <input name="listing[location]" placeholder="Ponmudi,Kerala" type="text" class="form-control" required>
         <div class="invalid-feedback">Location should be valid</div>
     </div>
     
